# MicromachinesTaller

./: .gitignore  .project  CMakeLists.txt  README.md  d  minimal.supp
Box2D/: CMakeLists.txt
Codigo plant UML/: Estructura cliente.txt  Game.txt  ModeladoDelJuego.txt  Modelo de una sala.txt  RoomController.txt  SceneSelection.txt  Threads.txt  World model.txt
assets/: bot_functions.lua  configuration.json  map1.json  scene.json  scene.yaml  test_scene.json
assets/misc/: bot_functions.lua  configuration.json  map1.json  map2.json  scene.json
sdl_test_for_model/: Area.h
src/Client/: Area.cpp  Area.h  Audio.cpp  Audio.h  BaseScene.h  BoostPowerupView.cpp  BoostPowerupView.h  BotHandler.cpp  BotHandler.h  CarView.cpp  CarView.h  CreadorTexturas.cpp  CreadorTexturas.h  CurveTrackView.cpp  CurveTrackView.h  EndScene.cpp  EndScene.h  GameObjects.cpp  GameObjects.h  GameScene.cpp  GameScene.h  HealthPowerupView.cpp  InputHandler.cpp  InputHandler.h  LobbyScene.cpp  LobbyScene.h  LuaInterpreter.cpp  LuaInterpreter.h  MenuScene.cpp  MenuScene.h  ObjectView.cpp  OilView.h  PlayerDescriptor.h  PlayerDisplay.cpp  PlayerDisplay.h  ReceiverThread.cpp  ReceiverThread.h  RockView.h  SceneSelector.cpp  SceneSelector.h  (+21 more)
src/Client/View/: ArrowView.cpp  ArrowView.h  BackgroundView.cpp  BackgroundView.h  BoostPowerupView.cpp  CarView.cpp  CarView.h  CurveTrackView.cpp  CurveTrackView.h  ExplosionView.cpp  ExplosionView.h  HealthBarBackView.cpp  HealthBarBackView.h  HealthBarFrontView.cpp  HealthBarFrontView.h  HealthPowerupView.cpp  HealthPowerupView.h  LapsTextView.cpp  LapsTextView.h  LobbyWarningView.cpp  LobbyWarningView.h  MudSplatView.cpp  MudSplatView.h  MudView.cpp  MudView.h  NumberView.cpp  NumberView.h  ObjectView.cpp  ObjectView.h  OilView.cpp  RockView.cpp  RoomView.cpp  RoomView.h  StartLineView.cpp  StartLineView.h  StraightTrackView.cpp  StraightTrackView.h
src/Common/: BlockingQueue.cpp  BlockingQueue.h  CommandEvent.cpp  CommandEvent.h  Constantes.h  Constants.h  Converter.cpp  Converter.h  Event.cpp  Event.h  InputEnum.h  Protocol.cpp  Protocol.h  Queue.cpp  Queue.h  SafeQueue.h  ServerSnapshot.cpp  ServerSnapshot.h  Socket.cpp  Socket.h  SocketError.h  Thread.cpp  Thread.h  json.hpp
src/Common/Event/: CommandEvent.cpp  CommandEvent.h  CreateRoomEvent.cpp  CreateRoomEvent.h  EmptyEvent.cpp  EmptyEvent.h  EndSnapshot.cpp  EndSnapshot.h  EnterLobbyEvent.cpp  EnterLobbyEvent.h  EnterRoomEvent.cpp  EnterRoomEvent.h  Event.h  EventCreator.cpp  EventCreator.h  GoBackToMenuEvent.cpp  GoBackToMenuEvent.h  LobbySnapshot.cpp  LobbySnapshot.h  PlayAsBotEvent.cpp  PlayAsBotEvent.h  PlayAsUserEvent.cpp  PlayAsUserEvent.h  PlayEvent.cpp  PlayEvent.h  SnapshotEvent.cpp  SnapshotEvent.h
src/Common/Eventos/: CommandEvent.cpp  CommandEvent.h  EnterLobbyEvent.cpp  EnterLobbyEvent.h  EnterRoomEvent.cpp  EnterRoomEvent.h  Event.cpp  Event.h  EventCreator.cpp  EventCreator.h  PlayAsBotEvent.cpp  PlayAsBotEvent.h  PlayAsUserEvent.cpp  PlayAsUserEvent.h  SnapshotEvent.cpp  SnapshotEvent.h
src/Server/: AcceptingThread.cpp  AcceptingThread.h  CMakeLists.txt  ClientAttendant.cpp  ClientAttendant.h  EventProtocol.cpp  EventProtocol.h  File.cpp  File.h  MessageProtocol.cpp  MessageProtocol.h  ModsThread.cpp  ModsThread.h  Player.cpp  Player.h  Protocol.cpp  Protocol.h  Room.cpp  Room.h  RoomController.cpp  RoomController.h  Server.cpp  Server.h  ThClient.h  Thread.h  serverMain.cpp
src/Server/Model/: Car.cpp  Car.h  Configuration.cpp  Configuration.h  ContactListener.cpp  ContactListener.h  DestructionListener.cpp  DestructionListener.h  FixtureUserData.h  Game.cpp  Game.h  GameThread.cpp  GameThread.h  Grass.cpp  Grass.h  Input.h  Modifier.cpp  Modifier.h  Track.cpp  Track.h  World.cpp  World.h
src/Server/Model/Car/: AcceleratingState.cpp  AcceleratingState.h  Car.cpp  Car.h  CarMovingState.cpp  CarMovingState.h  NegAcceleratingState.cpp  NegAcceleratingState.h  Tire.cpp  Tire.h  WithoutAcceleratingState.cpp  WithoutAcceleratingState.h
src/Server/Model/Car/MovingState/: AcceleratingState.cpp  CarMovingState.cpp  CarMovingState.h  NegAcceleratingState.cpp  NegAcceleratingState.h  WithoutAcceleratingState.cpp  WithoutAcceleratingState.h
src/Server/Model/Car/Turning/: CarTurningState.h  NotTurningState.h  TurningLeftState.h  TurningRightState.h
src/Server/Model/Car/TurningState/: CarTurningState.cpp  CarTurningState.h  NotTurningState.cpp  NotTurningState.h  TurningLeftState.cpp  TurningLeftState.h  TurningRightState.cpp  TurningRightState.h
src/Server/Network/: AcceptingThread.cpp  AcceptingThread.h  ClientAttendant.cpp  ClientAttendant.h  Collector.cpp  Collector.h  EventReceiver.cpp  EventReceiver.h  EventSender.cpp  EventSender.h  LobbyListener.cpp  LobbyListener.h  Room.cpp  Room.h  RoomController.cpp  RoomController.h  SafeCounter.cpp  SafeCounter.h  Server.cpp  Server.h  ThClient.cpp  ThClient.h  serverMain.cpp
src/Server/json/: configuration.json  json.hpp  scene.json
src/Server/mods/: DTOs.h  Makefile  ModsThread.cpp  ModsThread.h  Plugin.h  Plugin1.cpp  dlopen.c  dlopen.out  libs.txt  main.c  main.cpp  main.out  mainso.out  mainso_fullpath.out  plugin.c  plugin.h
src/Test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  serverMock  serverMock.cpp
src/mods/: DTOs.h  Makefile  Plugin.h  Plugin1.cpp  Plugin2.cpp  libs.txt
src/sdl_test_for_model/: CarView.cpp  InputHandler.cpp  InputHandler.h  SdlTexture.cpp  SdlTexture.h  test_sdl.cpp
src/test/: CMakeLists.txt  testMain.cpp
src/test/Server/: CarTest.h  TireTest.h
test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  testMain.cpp
test/Server/: CarTest.h
