cmake_minimum_required(VERSION 3.1.0)
project(Micromachines)

set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ggdb -DDEBUG -fno-inline -std=c++11 -pthread")
set (CMAKE_SHARED_LINKER_FLAGS "-ldl")

find_package(Lua REQUIRED)

message("Variables:\n")
message("LUA_FOUND: ${LUA_FOUND}")
message("LUA_LIBRARIES: ${LUA_INCLUDE_DIR}")
message("LUA_INCLUDE_DIR: ${LUA_INCLUDE_DIR}")
message("LUA_VERSION_STRING: ${LUA_VERSION_STRING}")
message("LUA_VERSION_MAJOR: ${LUA_VERSION_MAJOR}")
message("LUA_VERSION_MINOR: ${LUA_VERSION_MINOR}")
message("LUA_VERSION_PATCH: ${LUA_VERSION_PATCH}")

include_directories(${LUA_INCLUDE_DIR})

message("[INFO] Agregando '${CMAKE_SOURCE_DIR}/src/3rd-party' como directorio de includes")
include_directories(${CMAKE_SOURCE_DIR}/src/3rd-party)

message("[INFO] Agregando Box2D como libreria")
file(GLOB_RECURSE BOX2D_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/3rd-party/Box2D/*.cpp" "src/3rd-party/Box2D/*.h")
add_library(Box2D STATIC ${BOX2D_SOURCES})

message("[INFO] Cargando fuentes del servidor")
file(GLOB_RECURSE SERVER_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/Server/*.cpp" "src/Server/*.h")

message("[INFO] Cargando fuentes compartidos")
file(GLOB_RECURSE COMMON_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/Common/*.cpp" "src/Common/*.h" "src/Common/*.hpp")

message("[INFO] Cargando fuentes del cliente")
file(GLOB_RECURSE CLIENT_SOURCES RELATIVE ${CMAKE_SOURCE_DIR} "src/Client/*.cpp" "src/Client/*.h")

add_executable(mm_client ${CLIENT_SOURCES} ${COMMON_SOURCES})
target_link_libraries(mm_client SDL2 SDL2_image SDL2_mixer lua5.3)

add_executable(mm_server ${SERVER_SOURCES} ${COMMON_SOURCES})
target_link_libraries(mm_server Box2D ${CMAKE_DL_LIBS})

install(FILES assets/misc/bot_functions.lua DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/misc/scene.json DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/misc/map1.json DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/misc/map2.json DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/misc/configuration.json DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/car_red.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/car_blue.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/car_yellow.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/car_green.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/car_selected.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/start.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/background.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/menu_background.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/end_screen.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/lobby.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/arrow.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/straight_track.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/rock.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/curve_track.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/powerups.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/oil.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/mud.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/health_bar.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/health_background.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/explosion.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/mud_splat.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/room1.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/room2.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/room3.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/images/room4.png DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/audio/background.wav DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/audio/car_engine.wav DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/audio/car_brake.wav DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/audio/car_explosion.wav DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/audio/menu_button.wav DESTINATION ${CMAKE_BINARY_DIR})
install(FILES assets/audio/collision.wav DESTINATION ${CMAKE_BINARY_DIR})

install(FILES src/mods/libs.txt DESTINATION ${CMAKE_BINARY_DIR})

